# Npicalc_ms6985

./: pyproject.toml
src/Npicalc_ms6985/: __init__.py
src/Npicalc_ms6985/pi/: __init__.py  pi.py
