[project]
name = "Npicalc-ms6985"
version = "0.0.7"
description = "This is a test project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.1",
    "scipy",
]

[project.scripts]
Npicalc-ms6985 = "Npicalc_ms6985:main"
picalc = "Npicalc_ms6985.pi:main"
[project.optional-dependencies]
win = [
    "pandas>=2.3.3",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
docs = [
    "sphinx>=9.1.0",
]
